# gm-sdk-rs

./: Cargo.toml  README.md
docs/: index.html  tech_note.md
src/: lib.rs
src/sm2/: mod.rs
src/sm3/: mod.rs
src/sm4/: mod.rs
tests/: sm2_arith_test.rs  sm2_benchmark.rs  sm2_encrypt_decrypt_test.rs  sm2_performance_test.rs  sm2_point_test.rs  sm2_sign_verify_test.rs  sm2_standard_test.rs  sm2_test.rs  sm3_standard_test.rs  sm3_test.rs  sm4_debug_test.rs  sm4_standard_test.rs  sm4_test.rs
